# SpeedSnake

./: CMakeLists.txt  README.md
src/: constants.h  main.cpp  utils.cpp  utils.h
